# fx-system-trade

./: .gitignore  Dockerfile  a  build.sh  cleanup.sh  docker-compose.yml  log_trade-backtest-latest.sh  log_trade-backtest-retry.sh  log_trade-backtest.sh  log_trade-practice.sh  log_trade-sim.sh  openshift-fx-system-trade.yml  prune.sh  r  re.yml  rebuild.sh  redis.yml  refactor.sh  scaledown.sh  scaleup.sh  stop.sh  view.sh
docker/: docker-compose.yml
docker/fx-system-trade/: Dockerfile
docker/fx-trade/: Dockerfile
docker/get_rate/: Dockerfile  get_rate_data  get_rate_data_realtime
fx-system-trade/: Dockerfile  refactor.sh
fx-system-trade/src/: Fx.hs  FxChartData.hs  FxMongodb.hs  FxOandaAPI.hs  FxPrint.hs  FxSetting.hs  FxSettingData.hs  FxTechnicalAnalysis.hs  FxTechnicalAnalysisData.hs  FxTime.hs  FxTrade.hs  FxTradeData.hs  FxTweet.hs  Ga.hs  GaFx.hs  GlobalSettingData.hs  GlobalSettingFunction.hs  Tree.hs
get_rate/: Dockerfile  get_rate.py  get_rate.py.mongo  openssl.cnf  requirements.txt
get_rate_data/: Dockerfile  clear_fx-trade.py  comp.py  csv2db.py  csv2db.py.mongo  get_forexite.sh  get_rate.py  header.txt  read.py  requirements.txt  store_db.sh
get_rate_data/old/: get_rate.py
get_rate_data/org/: 240918.zip.1
get_rate_data_realtime/oandapy/stream/: stream.py
redis/: Dockerfile  redis.conf
src/: .secret.hs  Fx.hs  FxChartData.hs  FxMongodb.hs  FxOandaAPI.hs  FxPrint.hs  FxRedis.hs  FxSetting.hs  FxSettingData.hs  FxTechnicalAnalysis.hs  FxTechnicalAnalysisData.hs  FxTrade.hs  FxTradeData.hs  FxTweet.hs  Ga.hs  GaFx.hs  GlobalSettingData.hs  GlobalSettingFunction.hs  SecretData.hs  Tree.hs
stack/: README.md  app  compile.sh  debug.sh  fx-exe.ps  fx.cabal  profile.sh  run.sh  stack-trace.sh  stack.yaml  statistics.sh  test.sh
