name:                fx
version:             0.3
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fx#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base
  default-language:    Haskell2010

executable fx-exe
  hs-source-dirs:      app
  main-is:             Fx.hs
  ghc-options:         -O2 
  -- -threaded -rtsopts -with-rtsopts=-N-prof -fprof-auto -rtsopts -O3 -optc-O3 -optc-ffast-math -threaded -prof -fprof-auto -rtsopts -fprof-cafs  -fllvm -keep-llvm-files  -optc-O3 -optc-ffast-math -fexcess-precision -Wall
  build-depends:       base
                     , fx
                     , MonadRandom
                     , wreq
                     , mongoDB
                     , bytestring
                     , unix-time
                     , time
                     , containers
                     , lens
                     , transformers
                     , text
                     , aeson
                     , extra
                     , async
                     , deepseq
  default-language:    Haskell2010

test-suite fx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fx
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fx
